Actions
Bug #13589
closedccid: implicit conversion from 'atr_protocol_t' 'uccid_prot_t'
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
../../common/io/usb/clients/ccid/ccid.c: In function 'ccid_ioctl_status': ../../common/io/usb/clients/ccid/ccid.c:3992:16: error: implicit conversion from 'atr_protocol_t' {aka 'enum atr_protocol'} to 'uccid_prot_t' [-Werror=enum-conversion] 3992 | ucs.ucs_prot = slot->cs_icc.icc_cur_protocol; | ^ cc1: all warnings being treated as errors
Testing done: build/install/boot
Cast from one enum to other.
Updated by Electric Monk about 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ae5c3fb759f05e5de586c82b204aabe1e336b578
commit ae5c3fb759f05e5de586c82b204aabe1e336b578 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-01T08:58:43.000Z 13589 ccid: implicit conversion from 'atr_protocol_t' 'uccid_prot_t' Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions