13589 ccid: implicit conversion from 'atr_protocol_t' 'uccid_prot_t' Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>